tests/unit-fail-compilation/j057a.c.ref
j057a.c:2:1: error: Non-constant static initializer.
  Constraint violation (CV-TEAS5). See C11 sec. 6.7.9:4
Translation failed (config dumped). Run kcc -d j057a.c to see commands run.
