tests/unit-fail-compilation/j057a.c
int x = 1;
int y = 1 + x;

int main(void) {
      return 0;
}
